tests/gabc-dump/should-fail/unclosed-underbrace.gabc
name: unclosed underbrace;
%%
(c4) g(g) h(h[ub:0{])
